[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "s3fs>=2025.7.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
]
